@@ -133,6 +133,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Make deprecated dpkg-scanpackages --udeb option produce a warning.
   * Change dpkg-source --help output to state there's no default substvar
     file to match reality.
+  * Warn in start-stop-daemon if the argument to --name is longer than the
+    supported kernel process name size. Closes: #353015, #519128
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
